--- a/index.html
+++ b/index.html
@@ -10,5 +10,25 @@
     <script type="module" src="logic.js"></script>
 
     <scratch-card code="XXXX"></scratch-card>
+
+    <pre>
+
+    </pre>
+
+    <script>
+
+        const code = (length = 6) => {
+          let code = '';
+
+          while (code.length < length) {
+            code += String.fromCharCode(65 + Math.floor(Math.random() * (90 - 65)));
+          }
+
+          return code;
+        }
+
+        document.querySelector('scratch-card').setAttribute('code', code());
+
+    </script>
 </body>
 </html>
