--- a/example/index.html
+++ b/example/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preload" href="../lib/scratch-card.css" as="style" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
